review code which depends on ExecutorService and ThreadFactory